dfir_rs/tests/compile-fail-stable/surface_map_badtypes.rs
../compile-fail/surface_map_badtypes.rs